커스텀 아이템 몇개 추가 + 커스텀 아이템 보기 추가 + 인벤토리 쿨타임

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,6 @@ api-version: 1.19
 authors: [ Barity_ ]
 depend: [ ProtocolLib ]
 description: Wave-Zombie-Defence survival since 2020
+commands:
+  items:
+    description: 커스텀 아이템 리스트 명령어
